# alemartinello.github.io

./: .gitignore  .nojekyll  CNAME  README.md  _config.yml  _quarto.yml  hello.py  index.html  index.qmd  listings.json  pyproject.toml  research.html  research.qmd  robots.txt  search.json  sitemap.xml  styles.css  tidbits.html  tidbits.qmd
_data/: social_media.yml
_includes/: header.html  interests.html  masthead.html  pinned-project-card.html  pinned-projects.html  projects.html  thoughts.html
_layouts/: default.html  home.html
_posts/: 2019-01-29-hello-world.md  2019-11-29-How-NOT-to-calculate-gender-gaps-in-wages.md  2021-02-06-TYPS-what.md  2021-02-06-TYPS-why-git.md  2022-02-24-dstapi.md  2022-04-25-ml-governance.md
files/: CV.lyx
posts/: 2019-11-29_gender_gap.html  2019-11-29_gender_gap.qmd  2022-04-25_AI_5_focus_points.html  2022-04-25_AI_5_focus_points.qmd  2024-12_TeachSQLinGradSchool.html  2024-12_TeachSQLinGradSchool.qmd  2025-01_BigDataMadeSmall.html  2025-01_realkredit.html  Using DSTs API with python.html  Using DSTs API with python.ipynb  _2019-11-29.gender_gap_data-preview.html  _2019-11-29.gender_gap_data.ipynb  _2019-11-29.gender_gap_data.out.ipynb  _2025-01_realkredit.qmd
site_libs/bootstrap/: bootstrap-a652c116b21f402b806f3cbc5a90424b.min.css
