[project]
name = "sitetest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dstapi",
    "duckdb>=1.1.3",
    "ipykernel>=6.29.5",
    "jupyterlab>=4.3.2",
    "nbclient>=0.10.1",
    "nbformat>=5.10.4",
    "pandas>=2.2.3",
    "pip>=24.3.1",
    "pyarrow>=18.1.0",
    "seaborn>=0.13.2",
]

[tool.uv.sources]
dstapi = { git = "https://github.com/alemartinello/dstapi.git" }
